Alignment issue fix

--- a/media-queries.css
+++ b/media-queries.css
@@ -1,4 +1,8 @@
 @media only screen and (max-width: 600px) {
+  .main-container {
+    margin: 0;
+  }
+
   .section-header {
     flex-direction: column;
     gap: 4rem;
